# models/user.go
@@ -32,12 +32,15 @@ func (u *User)TableName() string {
 //注册用户时往数据库加用户
 func AddUser(u *User) bool {
 	var isSu bool
-	_, e := orm.NewOrm().Insert(u)
-	if e!=nil {
-		isSu=false
-		println(e.Error())
+	if GetUserByName(u) {
+		_, e := orm.NewOrm().Insert(u)
+		if e!=nil {
+			isSu=false
+		}else {
+			isSu=true
+		}
 	}else {
-		isSu=true
+		isSu=false
 	}
 	return isSu
 }
@@ -66,17 +69,23 @@ func UpdateUser(uid string, uu *User) (a *User, err error) {
 	return nil, errors.New("User Not Exist")
 }
 
-func GetUserByName(loginName string) (*User, error) {
+//查询用户是否在数据库中
+//true表示未注册,false表示已注册
+func GetUserByName(u *User) bool {
+	err := orm.NewOrm().Read(u,"username")
+	if err!=nil {
+		return true
+	}
+	return false
+}
+
+func GetUserInfoByName(loginName string) (*User,error) {
 	var user User
 	err := orm.NewOrm().QueryTable(TableName(tabName)).Filter("username",loginName).One(&user)
 	if err!=nil {
 		return nil,err
 	}
 	return &user,err
-}
-
-func GetUserInfoByName() () {
-	
 }
 
 func Login(username, password string) bool {
